--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="https://preview.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
     <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
     <script src="Class/class_earth.js"></script>
+    <script src="Class/class_vulcan.js"></script>
 
     <style>
         html,
@@ -61,12 +62,12 @@
 
         var sem = false, sempl = false, sempr = false, semRot = false;
         var createScene = function () {
-            scene = new BABYLON.Scene(engine);
-            camera = new BABYLON.ArcRotateCamera("Camera", -Math.PI / 2, Math.PI / 2, 4, BABYLON.Vector3.Zero(), scene);
+            // scene = new BABYLON.Scene(engine);
+            //camera = new BABYLON.ArcRotateCamera("Camera", -Math.PI / 2, Math.PI / 2, 4, BABYLON.Vector3.Zero(), scene);
 
-            initialMenu();
+            // initialMenu();
 
-            return scene;
+            return new Vulcan().getScene();
         };
 
         function managerEvents() {
